# raspberrypi-soracom-router

./: README.md  pyproject.toml  soracom_router.yaml
roles/router/files/: dhcpcd.conf  dnsmasq.conf  hostapd.conf
roles/router/tasks/: dhcpd.yaml  dnsmasq.yaml  hostapd.yaml  iptables.yaml  main.yaml  reboot.yaml
roles/soracom-air/tasks/: driver.yaml  main.yaml
