[tool.poetry]
name = "raspberrypi-soracom-router"
version = "0.1.0"
description = ""
authors = ["yomon8 <sebanngou8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
